# QTA1

./: .dockerignore  .env.example  .gcloudignore  .gitignore  BUDGET.md  DECISION_MEMO.md  FEASIBILITY.md  LICENSE  Makefile  PLAN.md  QC_AUDIT.md  README.md  SOURCES.md  STATE.json  cloudbuild.worker.yaml  cloudbuild.yaml  environment.yml  notes.md  pyproject.toml  vertex.md
configs/: models.yaml  sim_calib_2019.yaml  sim_oos_2025.yaml  sim_smoke.yaml
data/: README.md
docker/: Dockerfile.worker
docs/: ARBITRAGE_TEST_PROTOCOL.md  FEASIBILITY_ADDENDUM.md  G0_REPORT.md  G0_THROUGHPUT.md  G1_LEAKAGE_SPOTCHECK.md  G1_SNAPSHOT_MANIFEST.json  G1_UNIVERSES.md  G2_CONTAMINATION.md  G2_REPORT.md  G4_REPORT.md  IDEA2_FALSIFICATION.md  INVESTOR_ONE_PAGER.md  MODEL_SHAS.md  ONEPAGER.md  OOS_BACKTEST_DAILY_RETURNS.csv  OOS_BACKTEST_REPORT.md  P4_FOLLOWUP_REPORT.md  P4_PILOT.md  P5_STATS.md  PRICE_TRACKING_REPORT.md  QA_ANSWERS.md  RESULTS.md  RESULTS_REPORT.md  RQ1_REPORT.md  RQ2_REPORT.md  RQ3_REPORT.md  TRIALS.md  VERTEX_ACCOUNT_MIGRATION.md
notebooks/: agorasim_demo.ipynb
prompts/: agent_system.j2  contamination_probe.j2  decision_user.j2
scripts/: collect_sim_phase.py  launch_g0_throughput.sh  migrate_vertex_project.ps1  model_cache.py  p0_collect_throughput.py  p0_gate_data.py  p0_gate_throughput.py  p1_freeze_universes.py  p2_collect_gate.py  p2_contamination.py  p2_gate_real_model.py  p2_smoke_sim.py  p3_calibration_worker.py  p3_collect_calibration.py  p4_collect_followups.py  p4_collect_oos.py  p4_gate_budget.py  p4_oos_worker.py  p5_oos_backtest.py  p5_stats.py  (+6 more)
(+117 files in other folders)
